Make setting cookies synchronous.

Right now setting cookies is asynchronous, which can lead to race
conditions where setting a cookie then sending a request doesn't result
in the request having the cookie set (see the bug).

Bug: 898704
Change-Id: I1d362b0312942f57b933352b85c60cc1ff855fba
Reviewed-on: https://chromium-review.googlesource.com/c/1298489
Commit-Queue: Robbie McElrath <rmcelrath@chromium.org>
Commit-Queue: John Abd-El-Malek <jam@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602878}