content/browser/frame_host/render_frame_message_filter.cc
@@ -536,7 +536,6 @@ void RenderFrameMessageFilter::SetCookie(int32_t render_frame_id,
                                          const GURL& site_for_cookies,
                                          const std::string& cookie_line,
                                          SetCookieCallback callback) {
-  std::move(callback).Run();
   ChildProcessSecurityPolicyImpl* policy =
       ChildProcessSecurityPolicyImpl::GetInstance();
   if (!policy->CanAccessDataForOrigin(render_process_id_, url)) {
@@ -545,18 +544,22 @@ void RenderFrameMessageFilter::SetCookie(int32_t render_frame_id,
     SYSLOG(WARNING) << "Killing renderer: illegal cookie write. Reason: "
                     << reason;
     bad_message::ReceivedBadMessage(this, reason);
+    std::move(callback).Run();
     return;
   }
 
   net::CookieOptions options;
   std::unique_ptr<net::CanonicalCookie> cookie = net::CanonicalCookie::Create(
       url, cookie_line, base::Time::Now(), options);
-  if (!cookie)
+  if (!cookie) {
+    std::move(callback).Run();
     return;
+  }
 
   if (!GetContentClient()->browser()->AllowSetCookie(
           url, site_for_cookies, *cookie, resource_context_, render_process_id_,
           render_frame_id)) {
+    std::move(callback).Run();
     return;
   }
 
@@ -568,6 +571,7 @@ void RenderFrameMessageFilter::SetCookie(int32_t render_frame_id,
           url, resource_context_);
   if (cookie_store ||
       !base::FeatureList::IsEnabled(network::features::kNetworkService)) {
+    std::move(callback).Run();
     if (!cookie_store)
       cookie_store = request_context_->GetURLRequestContext()->cookie_store();
 
@@ -578,10 +582,14 @@ void RenderFrameMessageFilter::SetCookie(int32_t render_frame_id,
     return;
   }
 
+  net::CookieStore::SetCookiesCallback net_callback =
+      base::BindOnce([](SetCookieCallback callback,
+                        bool success) { std::move(callback).Run(); },
+                     std::move(callback));
   (*GetCookieManager())
       ->SetCanonicalCookie(*cookie, url.SchemeIsCryptographic(),
                            !options.exclude_httponly(),
-                           net::CookieStore::SetCookiesCallback());
+                           std::move(net_callback));
 }
 
 void RenderFrameMessageFilter::GetCookies(int render_frame_id,
